versioned_docs/version-5.2.0/api/2_capi/lobby/joinlobbywithpingdata.md
# JoinLobbyWithPingData

Adds the caller to the given lobby instance.

Use [PingRegions](/api/capi/lobby/pingregions) to generate the ping data.

<PartialServop service_name="lobby" operation_name="JOIN_LOBBY_WITH_PING_DATA" />

## Method Parameters
Parameter | Description
--------- | -----------
lobbyId | The lobby instance to join. 
otherUserCxIds | Array of other users (i.e. party members) to add to the lobby as well. The call will fail if all users can't be added. 
isReady | Initial ready-status of this user. 
extraJson | Initial extra-data about this user. 
teamCode | Preferred team for this user, if applicable. Send `""` or `null` for automatic assignment. 
pingData | Ping times for each region available for this lobby type. Can use GET_REGIONS_FOR_LOBBIES to retreive the list of regions for a given lobby type. Ping data is automatically passed in on the clients.

## Usage

```mdx-code-block
<BrowserWindow>
<Tabs>
<TabItem value="csharp" label="C#">
```

```csharp
string lobbyId = "123456:4v4:3";
string[] otherUserCxIds = { "123456:aaa-bbb-ccc-ddd:asdfjkl" };
bool isReady = false;
string extraJson = "{}";
string teamCode = "blue";
SuccessCallback successCallback = (response, cbObject) =>
{
    Debug.Log(string.Format("Success | {0}", response));
};
FailureCallback failureCallback = (status, code, error, cbObject) =>
{
    Debug.Log(string.Format("Failed | {0}  {1}  {2}", status, code, error));
};

<%= data.branding.codePrefix %>.LobbyService.JoinLobbyWithPingData(lobbyId, otherUserCxIds, isReady, extraJson, teamCode, successCallback, failureCallback);
```

```mdx-code-block
</TabItem>
<TabItem value="cpp" label="C++">
```

```cpp
const char *lobbyId = "123456:4v4:3";
std::vector<std::string> otherUserCxIds;
otherUserCxIds.push_back("123456:aaa-bbb-ccc-ddd:asdfjkl");
bool isReady = false;
const char *extraJson = "{}";
const char *teamCode = "blue";
<%= data.branding.codePrefix %>->getLobbyService()->joinLobbyWithPingData(lobbyId, otherUserCxIds, isReady, extraJson, teamCode, this);
```

```mdx-code-block
</TabItem>
<TabItem value="objectivec" label="Objective-C">
```

```objectivec
NSString *lobbyId = @"123456:4v4:3";
NSArray *otherUserCxIds = @[ @"123456:aaa-bbb-ccc-ddd:asdfjkl" ];
bool isReady = false;
NSString *extraJson = @"{}";
NSString *teamCode = @"blue";
BCCompletionBlock successBlock;      // define callback
BCErrorCompletionBlock failureBlock; // define callback

[[<%= data.branding.codePrefix %> lobbyService] joinLobbyWithPingData:lobbyId
             otherUserCxIds:otherUserCxIds
                    isReady:isReady
                  extraJson:extraJson
                   teamCode:teamCode
            completionBlock:successBlock
       errorCompletionBlock:failureBlock
                   cbObject:nil];
```

```mdx-code-block
</TabItem>
<TabItem value="java" label="Java">
```

```java
String lobbyId = "123456:4v4:3";
String[] otherUserCxIds = { "123456:aaa-bbb-ccc-ddd:asdfjkl" };
boolean isReady = false;
String extraJson = "{}";
String teamCode = "blue";
this; // implements IServerCallback

<%= data.branding.codePrefix %>.getLobbyService().joinLobbyWithPingData(lobbyId, otherUserCxIds, isReady, extraJson, teamCode, this);

public void serverCallback(ServiceName serviceName, ServiceOperation serviceOperation, JSONObject jsonData)
{
    System.out.print(String.format("Success | %s", jsonData.toString()));
}
public void serverError(ServiceName serviceName, ServiceOperation serviceOperation, int statusCode, int reasonCode, String jsonError)
{
    System.out.print(String.format("Failed | %d %d %s", statusCode,  reasonCode, jsonError.toString()));
}
```

```mdx-code-block
</TabItem>
<TabItem value="js" label="JavaScript">
```

```javascript
var lobbyId = "123456:4v4:3";
var otherUserCxIds = [ "123456:aaa-bbb-ccc-ddd:asdfjkl" ];
var isReady = false;
var extraJson = {};
var teamCode = "blue";

<%= data.branding.codePrefix %>.lobby.joinLobbyWithPingData(lobbyId, otherUserCxIds, isReady, extraJson, teamCode, result =>
{
	var status = result.status;
	console.log(status + " : " + JSON.stringify(result, null, 2));
});
```

```mdx-code-block
</TabItem>
<TabItem value="cfs" label="Cloud Code">
```

```cfscript
var lobbyId = "123456:4v4:3";
var otherUserCxIds = [ "123456:aaa-bbb-ccc-ddd:asdfjkl" ];
var isReady = false;
var extraJson = {};
var teamCode = "blue";
var pingData = {
    "ca-central-1": 98,
    "us-west-1": 123
};
var lobbyProxy = bridge.getLobbyServiceProxy();

var postResult = lobbyProxy.joinLobbyWithPingData(lobbyId, otherUserCxIds, isReady, extraJson, teamCode, pingData);
if (postResult.status == 200) {
    // Success!
}
```

```mdx-code-block
</TabItem>
<TabItem value="r" label="Raw">
```

```r
{
	"service": "lobby",
	"operation": "JOIN_LOBBY_WITH_PING_DATA",
	"data": {
		"lobbyId": "55555:4v4:3",
		"otherUserCxIds": [
			"55555:aaa-bbb-ccc-ddd:asdfjkl"
		],
		"isReady": false,
		"extraJson": {},
		"teamCode": "blue",
		"pingData": {
			"ca-central-1": 98,
			"us-west-1": 123
		}
	}
}
```

```mdx-code-block
</TabItem>
</Tabs>
</BrowserWindow>
```

